@@ -3,7 +3,7 @@
 version = 0.4.1
 
 # description of the config
-description = AtCoder Heuristic Contest; specification for tester/generator often change, so please check the project page for more information
+description = AtCoder Heuristic Contest; specification for tester often change, so please check the project page for more information
 
 # dir where result files are saved
 results_dir = .
@@ -38,11 +38,6 @@ autohide_fails = False
 # commands used to run / generate tests, check github project page for more information
 cmd_tester = cargo run --bin tester a.exe < %GEN_INPUT% > %OUTPUT_DIR%/%SEED%.out 2> %OUTPUT_DIR%/%SEED%.err
 output_files = %OUTPUT_DIR%/%SEED%.out,%OUTPUT_DIR%/%SEED%.err
-cmd_generator = 
-generator_cache = False
-# note: use of generators for atcoder is temporarily disabled (while it's convenient, it can lead to some subtle errors)
-# cmd_generator = cargo run --bin gen 
-# generator_cache = True
 
 # regex patterns used for extracting information (score, time & user-defined metadata) from output files
 # when analyzing output, every line is matched vs every pattern (you can add new patterns by adding options that start with "extraction_regex_")
