@@ -38,8 +38,6 @@ autohide_fails = False
 # commands used to run / generate tests, check github project page for more information
 cmd_tester = java -jar tester.jar -novis -exec a.exe -seed %SEED% %TESTER_ARGS% > %OUTPUT_DIR%/%SEED%.out
 output_files = %OUTPUT_DIR%/%SEED%.out
-cmd_generator =
-generator_cache = False
 
 # regex patterns used for extracting information (score, time & user-defined metadata) from output files
 # when analyzing output, every line is matched vs every pattern (you can add new patterns by adding options that start with "extraction_regex_")
